--- a/app.json
+++ b/app.json
@@ -7,6 +7,12 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "android": {
+      "package": "com.alihaider2929.scuba"
+    },
+    "ios": {
+      "bundleIdentifier": "com.alihaider2929.scuba"
+    }
   }
 }
