--- a/app.json
+++ b/app.json
@@ -16,6 +16,12 @@
     "ios": {
       "bundleIdentifier": "com.alihaider2929.scuba",
       "icon": "./icon.png"
+    },
+    "splash": {
+      "image": "./splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#000000"
     }
+    
   }
 }
