--- a/app.json
+++ b/app.json
@@ -4,31 +4,31 @@
   "expo": {
     "name": "scuba",
     "slug": "scuba",
-    "icon": "./icon.png",
+    "icon": "./assets/icon.png",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
     ],
     "android": {
       "package": "com.alihaider2929.scuba", 
-      "icon": "./icon.png",
+      "icon": "./assets/icon.png",
       "splash": {
-        "image": "./splash.png",
+        "image": "./assets/splash.png",
         "resizeMode": "contain",
         "backgroundColor": "#000000"
       }
     },
     "ios": {
       "bundleIdentifier": "com.alihaider2929.scuba",
-      "icon": "./icon.png",
+      "icon": "./assets/icon.png",
       "splash": {
-        "image": "./splash.png",
+        "image": "./assets/splash.png",
         "resizeMode": "contain",
         "backgroundColor": "#000000"
       }
     },
     "splash": {
-      "image": "./splash.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#000000"
     }
