--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "version": "1.0.0",
     "assetBundlePatterns": ["**/*"],
     "android": {
-      "package": "com.scuba", 
+      "package": "name.scuba.org", 
       "icon": "./assets/icon.png",
       "splash": {
         "image": "./assets/splash.png",
@@ -16,7 +16,7 @@
       }
     },
     "ios": {
-      "bundleIdentifier": "com.scuba",
+      "bundleIdentifier": "name.scuba.org",
       "icon": "./assets/icon.png",
       "splash": {
         "image": "./assets/splash.png",
